/*
 * $Id: ChangeLog,v 1.634 2009-12-23 23:55:20 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-12-23 18:05 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  + samples/incremental.prg
    + Incremental search sample.
  * source/h_media.prg
  * source/h_progressbar.prg
  * source/h_timer.prg
    ! Fixed unused _OOHG_AllVars warning.
  * source/h_dll.prg
    ! Fixed arg unused variable.
  * source/h_toolbar.prg
  * source/makelib_vc.bat
    ! Fixed warnings.

2009-12-22 14:05 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_print
    * added the option to select another port. (by default prn)

2009-12-22 10:35 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_dll.prg
    * new try for Dlls  made by VIC from scratch.

2009-12-13 21:23 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_dll.prg
    * Removed unused parameters.
    * Minor formatting.
    * Added $Id header.

2009-12-13 15:54 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
   * source/c_activex.c
   * source/h_activex.prg
     ! optimizations in activex in order to compile with harbour 2.0
   * source/h_browse.prg
     * minor formatting
   + h_dll.prg
   * resources/oohg.rc
   * resources/makeres_mingw.bat
   * compile_mingw.bat
       to manage resources in a better way.  

2009-11-23 20:47 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  + ./compile_vc.bat
  + source/makelib_vc.bat
    + MSVC 9 compilation added.
  * ./compile_bcc.bat
    ! Fixed environment variables checkup.
  * source/h_button.prg
    ! Fixed BUTTON_IMAGELIST structure definition.
  * source/miniprint.prg
    ! Fixed uninitialized variables.
  * source/h_picture.prg
    * Removed unused iPage variable.
  * source/h_editbox.prg
    ! Fixed unused _OOHG_AllVars warning.

2009-11-22 11:45 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_scroll.prg